<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Карточка данных"
        app:titleMarginStart="120dp"
        android:background="@color/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/addImageViewIV"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:src="@drawable/baseline_add_24"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

        <EditText
            android:id="@+id/nameEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/surnameEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:textSize="24sp"/>

            <EditText
                android:id="@+id/phoneEditTextET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:textSize="24sp"
                android:inputType="phone"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <EditText
            android:id="@+id/birthdayDayEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:textSize="24sp"
            android:layout_marginEnd="5dp"
            android:inputType="number" />

        <EditText
            android:id="@+id/birthdayMonthEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:textSize="24sp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/birthdayYearEditTextET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:textSize="24sp"
            android:layout_marginStart="5dp"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="24sp"
        android:layout_margin="30dp" />

</LinearLayout>